feat: P4ADEV-4949 - DEBT_POSITIONS_TYPE_ORG_OPERATORS adding Service (#42)